<resources>
    <string name="app_name">LoginSqlite</string>
    <string name="configuring">Configuring..</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="ok">ok</string>
    <string name="username_email">Username / Email</string>
</resources>